--- a/src/options.html
+++ b/src/options.html
@@ -47,7 +47,7 @@ a.disabled {color: #ccc!important; background: #eee!important; cursor: default!i
 </head>
 <body>
 <div class="main">
-	<h2>设置<strong>HTTP</strong>与<strong>HTTPS</strong>代理</h2>
+	<h2>设置代理</h2>
 	<div class="wrapper">
 		<div class="left-con">
 			<div id="proxyList" class="proxy-list">
@@ -57,7 +57,7 @@ a.disabled {color: #ccc!important; background: #eee!important; cursor: default!i
 		</div>
 		<div class="right-con">
 			<div>
-				<label>名称：</label>
+				<label>代理名称：</label>
 				<p><input id="proxyName" type="text" class="proxy-name" placeholder="name" maxlength="36" /></p>
 				<label>请填写HTTP与HTTPS代理的IP(或域名)与端口：</label>
 				<p><input id="proxyHost" type="text" class="proxy-host" placeholder="host" maxlength="256" /><span class="proxy-separator">:</span><input id="proxyPort" type="text" class="proxy-port" placeholder="port" maxlength="5" /></p>
